--- a/stylesheets/components/_swiper.scss
+++ b/stylesheets/components/_swiper.scss
@@ -8,6 +8,7 @@
     margin: 0 auto;
     padding: 32px;   
     z-index: 50;   
+    background-color: #fff;
     .reviewPerson {
         top: -50px;
         left: 32px;
